correct line spacing in t5 blog

--- a/styles/main.css
+++ b/styles/main.css
@@ -286,9 +286,7 @@ p {
   width: 100%;
 }
 
-pre {
 
-}
 
 .code-comment {
   color: #616161
